; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/comet46/keymaps/satt/extr_action_pseudo_lut.c_get_shift_bit.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/comet46/keymaps/satt/extr_action_pseudo_lut.c_get_shift_bit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SHIFT_BIT_SIZE = common dso_local global i32 0, align 4
@send_key_shift_bit = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [51 x i8] c"get_shift_bit: Can't get shift bit. keycode: %02X\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_shift_bit(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = ashr i32 %4, 3
  %6 = load i32, i32* @SHIFT_BIT_SIZE, align 4
  %7 = icmp slt i32 %5, %6
  br i1 %7, label %8, label %19

8:                                                ; preds = %1
  %9 = load i32*, i32** @send_key_shift_bit, align 8
  %10 = load i32, i32* %3, align 4
  %11 = ashr i32 %10, 3
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %9, i64 %12
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* %3, align 4
  %16 = and i32 %15, 7
  %17 = shl i32 1, %16
  %18 = and i32 %14, %17
  store i32 %18, i32* %2, align 4
  br label %22

19:                                               ; preds = %1
  %20 = load i32, i32* %3, align 4
  %21 = call i32 @dprintf(i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str, i64 0, i64 0), i32 %20)
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %19, %8
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @dprintf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
